# nicholaslong

./: .gitignore  .pre-commit-config.yaml  CNAME  README.md  _config.yml  index.html  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  pre-commit.yml
_includes/: contact.html  footer.html  head.html  header.html
_posts/: 2016-04-13-about.markdown
css/: landing-page.css
