[tool.poetry]
name = "nicholaslong.org"
version = "0.1.0"
description = ""
authors = ["Nicholas Long <nllong>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
